--- a/WS02_JS_basics2/workshop2.html
+++ b/WS02_JS_basics2/workshop2.html
@@ -5,6 +5,8 @@
 		<title>Workshop 2</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
+</script>
+
 	<body>
 		<h1>Workshop 2: JavaScript BOM</h1>
 		<hr />
@@ -16,19 +18,58 @@
 		page. <br />
 		  <br />
 		  <em><strong>"If I had nine hours to chop down a tree, I'd spend the first six sharpening my ax."</strong> <br />
-		  -- Abraham Lincoln</em></p>
+		  -- Abraham Lincoln</em></p
 		
+		  <script>
+
+  document.write(
+    "<p style='font-style: italic; font-size: 2.5em;'>\"If I had nine hours to chop down a tree, I'd spend the first six sharpening my ax.\"</p>" +
+    "<p style='text-align: right; font-weight: bold;'>-- Abraham Lincoln</p>"
+  );
+</script>
+
 		<h2>Exercise 2</h2>
 		<p>Create a JavaScript function called repeatingText. It writes out a line of text to the page 50 times.</p>
 		
+		<script>
+			function repeatingText() {
+				for (let i = 0; i < 50; i++) {
+					document.write("This is line " + (i + 1) + "<br>");
+				}
+			}
+			repeatingText();	
+		</script>
+
 		<h2>Exercise 3</h2>
 		<p>Create a JavaScript if-statement, which checks if the user is using Mozilla browser. If it is, the browser should load http://www.mozilla.org" page. If not, the browser 
 		should load some other website. Create simple pages to test the code.</p>
-		
+
+	 <script0>
+			if (navigator.userAgent.toLowerCase().indexOf('mozilla') !== -1) {
+				window.location.href = "http://www.mozilla.org";
+			} else {
+				window.location.href = "http://www.example.com"; // Replace with another website
+			}
+        
+    </script>
+	
+
 		<h2>Exercise 4</h2>
 		<p>Create a simple web page, where JavaScript confirm-dialog will pop out asking if the user is a student or not. If the user clicks OK write "Welcome student" to the 
 		page. If the user clicks cancel, write on the page: "Sorry, this page is for students only".</p>
-		
+
+		    <script>
+        // Show confirm dialog to user
+        var isStudent = confirm("Are you a student?");
+        
+        // Write message based on response
+        if (isStudent) {
+            document.write("<h2>Welcome student!</h2>");
+        } else {
+            document.write("<h2>Sorry this page is for students only</h2>");
+        }
+    </script>
+
 		<h2>Exercise 5</h2>
 		Use document.write to output an image tag with a real image to the page. When you're done, try writing a JavaScript function to display a random image from the following list of images. HINT: You can access individual images using the table index.  Images[0] for example contains the url: "<a href="http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg">http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg</a>".
 
@@ -40,7 +81,19 @@
 			];
 		</pre>
 		<script>
-            <!-- JavaScript goes here -->
+	
+			function displayRandomImage() {
+				var images = [
+					"http://farm4.staticflickr.com/3691/11268502654_f28f05966c_m.jpg", 
+					"http://farm1.staticflickr.com/33/45336904_1aef569b30_n.jpg", 
+					"http://farm6.staticflickr.com/5211/5384592886_80a512e2c9.jpg"
+				];
+				var randomIndex = Math.floor(Math.random() * images.length);
+				var randomImage = images[randomIndex];
+				document.write('<img src="' + randomImage + '" alt="Random Image">');
+			}
+			displayRandomImage();
+
 		</script>
 	</body>
 </html>
