--- a/WS02_JS_basics2/workshop2.html
+++ b/WS02_JS_basics2/workshop2.html
@@ -44,7 +44,7 @@
 		<p>Create a JavaScript if-statement, which checks if the user is using Mozilla browser. If it is, the browser should load http://www.mozilla.org" page. If not, the browser 
 		should load some other website. Create simple pages to test the code.</p>
 
-	 <script0>
+	 <script0>  !!!!!!<REMOVE "0"!!!!!! 
 			if (navigator.userAgent.toLowerCase().indexOf('mozilla') !== -1) {
 				window.location.href = "http://www.mozilla.org";
 			} else {
